Added an animation timer

--- a/News.html
+++ b/News.html
@@ -24,7 +24,7 @@
             <li><a href="About.html">About</a></li>
             <li><a href="Academic.html">Academics</a></li>
             <li><a href="News.html">News & Events</a></li>
-            <li><a href="Gallery.html">News & Events</a></li>
+            <li><a href="Gallery.html">Gallery</a></li>
             <li><a href="Contact.html">Contact us</a></li>
         </ul>
     </nav>
