--- a/About.html
+++ b/About.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gayaza High School</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/449a7ce769.js" crossorigin="anonymous"></script>
@@ -42,6 +43,7 @@
                 <li><a href="Gallery.html">Gallery</a></li>
                 <li><a href="Contact.html">Contact us</a></li>
             </ul>
+            <button class="hamburger" >☰</button>
           </nav>
          
     </header>
@@ -151,11 +153,10 @@
          </div>
        </section>
 
-    <label class="switch">
-        <input type="checkbox" id="darkModeToggle">
-        <span class="slider"></span>
-    </label>
-    
+       <button id="darkModeToggle">
+        <i id="themeIcon" class="fas fa-moon"></i> 
+    </button>
+
        </main>
     <!--Footer-->
     <footer class="footer">
