--- a/Academics.html
+++ b/Academics.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gayaza High School</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <script src = "scripts.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -43,6 +44,8 @@
             <li><a href="Gallery.html">Gallery</a></li>
             <li><a href="Contact.html">Contact us</a></li>
         </ul>
+        <button class="hamburger" >☰</button>
+
       </nav>
     </header>
 
@@ -240,10 +243,10 @@ with these and may select additional elective subjects based on their interests 
 
          <p><b>UCE Examination Papers</b>: Paper 1 Paper 1 (Theory), Paper 2 Practical (Cooking & Meal Planning)</p>
 </div>
-<label class="switch">
-    <input type="checkbox" id="darkModeToggle">
-    <span class="slider"></span>
-</label>
+<button id="darkModeToggle">
+    <i id="themeIcon" class="fas fa-moon"></i> 
+</button>
+
 
 
     <!--Footer-->
