--- a/News.html
+++ b/News.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gayaza High School</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/449a7ce769.js" crossorigin="anonymous"></script>
@@ -27,6 +28,8 @@
             <li><a href="Gallery.html">Gallery</a></li>
             <li><a href="Contact.html">Contact us</a></li>
         </ul>
+        <button class="hamburger" >☰</button>
+
     </nav>
     </header>
     <h1 id="news-h1">NEWS AND EVENTS</h1>
@@ -92,6 +95,11 @@
             <P>Gayaza high school will always provide quality education before, now and forever </P>
         </div>
     </div>
+
+    <button id="darkModeToggle">
+        <i id="themeIcon" class="fas fa-moon"></i> 
+    </button>
+
     <!--Footer-->
     <footer class="footer">
         <div class="sectionleft">
@@ -126,5 +134,6 @@
         </div>
   
     </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
