--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gayaza High School</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <script src = scripts.js></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -44,6 +45,8 @@
             <li><a href="Gallery.html">Gallery</a></li>
             <li><a href="Contact.html">Contact us</a></li>
         </ul>
+        <button class="hamburger">☰</button>
+
       </nav>
     </header>
 
@@ -179,10 +182,10 @@
          <button class="next" onclick="nextslide()">&#10095</button>
         </div>
     
-    <label class="switch">
-      <input type="checkbox" id="darkModeToggle">
-      <span class="slider"></span>
-  </label>
+        <button id="darkModeToggle">
+          <i id="themeIcon" class="fas fa-moon"></i> 
+      </button>
+  
   
     <!--Footer-->
     <footer class="footer">
