Added code for the testimonial, dynamic calendar, on-scroll animations

--- a/A_level.html
+++ b/A_level.html
@@ -241,16 +241,13 @@
              </ul>
     </div>
     </div>
-    <label class="switch">
-        <input type="checkbox" id="darkModeToggle">
-        <span class="slider"></span>
-    </label>
+  
     
 
     <!--Dynamic Table-->
     <div class="table-container"></div>
     <b><h2 class="montserrat first-heading ">Teachers with their Respective Subject Allocations</h2></b>
-    <form class="form-container">
+    <form class="form-container" id="ac-form">
             <label for="subject">Subject</label><br>
             <input type="text" id="subject" name="subject"><br><br>
 
