--- a/O_level.html
+++ b/O_level.html
@@ -346,34 +346,31 @@
 
 
    <!--Dynamic Table-->
-   <form>
-    <div class="input-row">
-        <label for="subject">Subject</label><br>
-        <input type="text" id="subject" name="subject"><br><br>
+   <div class="table-container"></div>
+   <b><h2 class="montserrat first-heading ">Teachers with their Respective Subject Allocations</h2></b>
+   <form class="form-container" id="ac-form">
+           <label for="subject">Subject</label><br>
+           <input type="text" id="subject" name="subject"><br><br>
 
-        <label for="teacher">Teacher</label><br>
-        <input type="text" id="teacher" name="teacher"><br><br>
+           <label for="teacher">Teacher</label><br>
+           <input type="text" id="teacher" name="teacher"><br><br>
 
-        <button>Submit</button><br><br>
-</form>        
+           <button class="dyn-table">Submit</button><br><br>
+   </form>        
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Subject</th>
-                    <th>Teacher</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+           <table>
+               <thead>
+                   <tr>
+                       <th>Subject</th>
+                       <th>Teacher</th>
+                       <th></th>
+                   </tr>
+               </thead>
+               <tbody></tbody>
+           </table>
 
-    </div>
+       </div>
    
-   <label class="switch">
-    <input type="checkbox" id="darkModeToggle">
-    <span class="slider"></span>
-</label>
 
        <!--Footer-->
        <footer class="footer">
