--- a/Contact.html
+++ b/Contact.html
@@ -91,8 +91,9 @@
             <div class="contact-form">
                 <h2 >Send Us a Message</h2>
                 <p>We'd love to hear from you. Please fill out the form below and we'll get back to you as soon as possible.</p>
-                <form action="https://api.web3forms.com/submit" method="POST">
+                <form action="https://api.web3forms.com/submit" method="POST" id="formx" >
                     <input type="hidden" name="access_key" value="615e4080-3c61-45a2-b52e-bdcf2dbd66ae">
+                    <div id="error"></div>
                     <div class="form-group">
                         <label for="name">Full Name</label>
                         <input type="text" id="name" name="name" placeholder="Enter your full name" required>
