--- a/Academics.html
+++ b/Academics.html
@@ -58,8 +58,8 @@
 
     <div class="level-container">
     <ul class="montserrat">
-    <li><a href="O_level.html" class="first-heading"> O level</a></li>
-    <li><a href=A_level.html class="first-heading">A level </a></li>
+    <li><a href="O_level.html"> O level</a></li>
+    <li><a href=A_level.html >A level </a></li>
     </ul>
     </div>
 
