--- a/Gallery.html
+++ b/Gallery.html
@@ -19,7 +19,7 @@
 
 <body>
     <!--Header-->
-     <header>
+    <header>
         <div class="info">
             <img src="Images\Gayaza logo.png" alt="School logo" class="logo"> 
             <div class="text">
@@ -29,7 +29,7 @@
              </div>
     
         <nav class="navbar">
-            <ul class="w-montserrat">
+            <ul class="montserrat">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li><a href="Academics.html">Academics</a>
@@ -44,30 +44,30 @@
                 <li><a href="Contact.html">Contact us</a></li>
             </ul>
             <button class="hamburger">☰</button>
-
+    
           </nav>
         </header>
 
         <main>
             <div class="album">
                 <div class="gallery">
-                    <h4>School Life</h4>
+                    <h4 class="open-sans">School Life</h4>
                     <img src="Images/sl4.PNG" alt="image4" onclick="openLightbox('school')">
                 </div>
                 <div class="gallery">
-                    <h4>Cultural Day</h4>
+                    <h4 class="open-sans">Cultural Day</h4>
                     <img src="Images/cd8.PNG" alt="image7" onclick="openLightbox('cultural')">
                 </div>
                 <div class="gallery">
-                    <h4>Prom</h4>
+                    <h4 class="open-sans">Prom</h4>
                     <img src="Images/prom9.PNG" alt="Image 9" onclick="openLightbox('prom')">
                 </div>
                 <div class="gallery">
-                    <h4>Sports</h4>
+                    <h4 class="open-sans">Sports</h4>
                     <img src="Images/sportsday.jpg" alt="image1" onclick="openLightbox('sports')">
                 </div>
                 <div class="gallery">
-                    <h4>Clubs</h4>
+                    <h4 class="open-sans">Clubs</h4>
                     <img src="Images/clubs1.PNG" alt="image1" onclick="openLightbox('clubs')">
                 </div>
             </div>
