--- a/O_level.html
+++ b/O_level.html
@@ -53,8 +53,8 @@
         <div class="cover-container cover-img"><img src="Images\o level.jpg" alt="O level students" class="cover-img"></div>
    
        <!--O level academic info-->
-      <b><h4 class="montserrat first-heading">ORDINARY LEVEL</h4></b>
-      <div class="level-container">
+      <b><h2 class="h-montserrat first-heading">ORDINARY LEVEL</h2></b>
+      <div class="level-container block">
       <p> The Ugandan O-Level curriculum is designed to provide students with a comprehensive education, preparing them for both Advanced Level 
        studies and future professional courses at universities and other institutions of higher learning. The curriculum emphasizes both academic 
        knowledge and practical skills, ensuring students are well-equipped for various career paths.</p>
@@ -69,7 +69,7 @@
        <b><h4 class="montserrat heading">Compulsory Subjects:</h4></b>
 
        <!--Accordion-->
-       <div class="section-panel">
+       <div class="section-panel block">
        <button class="accordion">English<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Focuses on developing proficiency in reading, writing, listening, and speaking. Emphasizes grammar, vocabulary, comprehension, composition,
@@ -236,7 +236,7 @@
    
    <!--Elective Subjects-->
    <b><h4 class="heading">Elective Subjects:</p></h4>
-   <div class="section-panel">
+   <div class="section-panel block">
    <button class="accordion">Agriculture<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Covers principles of farming, soil management, livestock care, and agribusiness. 
@@ -350,7 +350,7 @@
 
    <!--Dynamic Table-->
    <div class="table-container"></div>
-   <b><h2 class="montserrat first-heading ">Teachers with their Respective Subject Allocations</h2></b>
+   <b><h3 class="montserrat heading">Teachers with their Respective Subject Allocations</h3></b>
    <form class="form-container" id="ac-form">
            <label for="subject">Subject</label><br>
            <input type="text" id="subject" name="subject"><br><br>
@@ -361,7 +361,7 @@
            <button class="dyn-table">Submit</button><br><br>
    </form>        
 
-           <table>
+           <table class="ac-table">
                <thead>
                    <tr>
                        <th>Subject</th>
@@ -417,5 +417,6 @@
        </footer>
 
        <script src="scripts.js"></script>
+       <script src="jscript.js"></script>
    </body>
    </html>
