--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gayaza High School</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="responsive.css">
     <script src = scripts.js></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -31,7 +32,7 @@
          </div>
 
     <nav class="navbar">
-        <ul class="w-montserrat">
+        <ul class="montserrat">
             <li><a href="index.html">Home</a></li>
             <li><a href="About.html">About</a></li>
             <li><a href="Academics.html">Academics</a>
@@ -83,7 +84,7 @@
       <!--Headteacher's Message-->
     <section id="greeting" class="block">
 
-    <div class="headteacher_image">
+    <div>
       <img src="Images\headmistress2.png" alt="Headteacher" id="headteacher">
     </div>
 
@@ -291,5 +292,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
   <script src="scripts.js"></script>
+  <script src="jscript.js"></script> 
 </body>
 </html>
