--- a/Contact.html
+++ b/Contact.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src = scripts.js></script>
     <link rel="stylesheet" href="css/contact-style.css">
+    <link rel="shortcut icon" href="Images/1.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/449a7ce769.js" crossorigin="anonymous"></script>
@@ -50,7 +51,13 @@
 
   
     
-        <section class="contact-section">
+        <!-- Contact Hero Section -->
+    <section class="contact-hero">
+        <h1>Get in Touch with Gayaza High School</h1>
+        <p>We're here to answer any questions you may have about our school, admissions, or academic programs. Feel free to reach out and we'll respond as soon as possible.</p>
+    </section>
+
+    <section class="contact-section">
             <div class="contact-info">
                 <div class="contact-details">
                     <h3>Contact Information</h3>
