--- a/Contact.html
+++ b/Contact.html
@@ -6,6 +6,7 @@
     <title>Gayaza High School</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="shortcut icon" href="Images/1.jpg" type="image/x-icon">
     <script src = scripts.js></script>
     <link rel="stylesheet" href="css/contact-style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
