--- a/A_level.html
+++ b/A_level.html
@@ -242,10 +242,9 @@
              </ul>
     </div>
     </div>
-    <label class="switch">
-        <input type="checkbox" id="darkModeToggle">
-        <span class="slider"></span>
-    </label>
+    <button id="darkModeToggle">
+        <i id="themeIcon" class="fas fa-moon"></i> 
+    </button>
     
 
     <!--Dynamic Table-->
@@ -310,5 +309,6 @@
   
     </footer>
     <script src="scripts.js"></script>
+    <script src="darkmode.js"></script>
 </body>
 </html>
