Fixed the accordion and a bit of the dark mode button

--- a/O_level.html
+++ b/O_level.html
@@ -418,5 +418,7 @@
 
        <script src="scripts.js"></script>
        <script src="jscript.js"></script>
+       <script src="darkmode.js"></script>
+       <script src="accordion.js"></script>
    </body>
    </html>
