--- a/A_level.html
+++ b/A_level.html
@@ -317,5 +317,7 @@
     </footer>
     <script src="scripts.js"></script>
     <script src="jscript.js"></script>
+    <script src="darkmode.js"></script>
+    <script src="accordion.js"></script>
 </body>
 </html>
