--- a/Gallery.html
+++ b/Gallery.html
@@ -128,6 +128,7 @@
  
     <script src="lightbox.js"></script>
     <script src="scripts.js"></script>
+    <script  src="darkmode.js"></script>
 main
 </body>
 </html>
