--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
   <script src="scripts.js"></script>
-  <script src="jscript.js"></script> 
+  <script src="jscript.js"></script>
+  <script  src="darkmode.js"></script>
 </body>
 </html>
