Working testimonial section :)

--- a/index.html
+++ b/index.html
@@ -151,12 +151,14 @@
               <img src="Images\GAPA-practice.jpg" alt="GAPA">
             </div>
             <div class="h-content open-sans">
-              <h4>Title One</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nulla,
-                 nihil dolorem harum tempore, ex quod ea facere perspiciatis itaque aliquid 
-                 non delectus, quae eum? Quis dolores autem illum? Facere?
+              <h4>GAPA 2025</h4>
+              <p>GAPA this year will yet again showcase the diverse talents of its students through vibrant performances in drama, 
+                music, and dance. This year's theme focuses on unity and diversity, allowing students to express their 
+                unique stories and perspectives on stage. Rhoda Nsibambi emerged victorious at the end of the event, bagging in their second 
+                another trophy, in two years. <br>
+                
                 </p>
-                <a href="">Read More</a>
+                <a href="https://www.linkedin.com/pulse/gayaza-high-school-showcases-talent-gapa-2025-drhgf/">Read More</a>
             </div>
             <div class="posted-date">
               <p>Posted on Mar 30, 2025</p>
@@ -167,12 +169,12 @@
               <img src="Images\Stanbic.jpg" alt="GAPA">
             </div>
             <div class="h-content open-sans">
-              <h4>Title Two</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nulla,
-                 nihil dolorem harum tempore, ex quod ea facere perspiciatis itaque aliquid 
-                 non delectus, quae eum? Quis dolores autem illum? Facere?
+              <h4>Stanbic Bank Championship</h4>
+              <p>Gayaza High School geared up for an exciting participation in the upcoming Stanbic Bank - Uganda National Schools 
+                Championship. As one of the leading institutions in the competition, Gayaza has consistently demonstrated excellence in 
+                sports and academics. The school's talented participants brought back home a trophy.
                 </p>
-                <a href="">Read More</a>
+                <a href="https://gayazaoldgirls.com/gayaza-high-school-win-stanbic-national-schools-championship/">Read More</a>
             </div>
             <div class="posted-date">
               <p>Posted on Mar 26, 2025</p>
@@ -183,12 +185,12 @@
               <img src="Images\Warren_house.jpg" alt="GAPA">
             </div>
             <div class="h-content open-sans">
-              <h4>Title Three</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nulla,
-                 nihil dolorem harum tempore, ex quod ea facere perspiciatis itaque aliquid 
-                 non delectus, quae eum? Quis dolores autem illum? Facere?
+              <h4>New House</h4>
+              <p>Gayaza High Schoo is thrilled to announce the opening of its long-awaited new house, named Warren. 
+                This significant addition to the school's infrastructure aims to enhance the living and learning environment for students. 
+                Designed with modern amenities, Warren House will foster a sense of community and provide a safe space for personal growth and development.
                 </p>
-                <a href="">Read More</a>
+                <a href="https://gayazaoldgirls.com/warren-house/">Read More</a>
             </div>
             <div class="posted-date">
               <p>Posted on Mar 2, 2025</p>
