--- a/About.html
+++ b/About.html
@@ -234,5 +234,6 @@
     <script src="scripts.js"></script>
     <script  src="darkmode.js"></script>
     <script src="tab.js"></script>
+    <script src="hamburger.js"></script>
 </body>
 </html>
