--- a/Academics.html
+++ b/Academics.html
@@ -101,5 +101,6 @@
     </footer>
     <script src="scripts.js"></script>
     <script  src="darkmode.js"></script>
+    <script src="hamburger.js"></script>
 </body>
 </html>
