--- a/Contact.html
+++ b/Contact.html
@@ -155,5 +155,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
   <script src="scripts.js"></script>
   <script  src="darkmode.js"></script>
+  <script src="hamburger.js"></script>
 </body>
 </html>
