--- a/News.html
+++ b/News.html
@@ -219,5 +219,6 @@
     </footer>
     <script src="scripts.js"></script>
     <script  src="darkmode.js"></script>
+    <script src="hamburger.js"></script>
 </body>
 </html>
