--- a/index.html
+++ b/index.html
@@ -294,5 +294,6 @@
   <script src="scripts.js"></script>
   <script src="jscript.js"></script>
   <script  src="darkmode.js"></script>
+  <script src="hamburger.js"></script>
 </body>
 </html>
