added script for test

--- a/index.html
+++ b/index.html
@@ -294,5 +294,6 @@
   <script src="tab.js"></script>
   <script  src="darkmode.js"></script>
   <script src="hamburger.js"></script>
+  <script src="test.js"></script>
 </body>
 </html>
