--- a/A_level.html
+++ b/A_level.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gayaza High School</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <script src = "scripts.js"></script>
     <link rel="shortcut icon" href="Images/1.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -16,11 +17,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
-</head>   
-
-<body>    
+<body>
      <!--Header-->
      <header>
         <div class="info">
@@ -46,8 +46,11 @@
                 <li><a href="Gallery.html">Gallery</a></li>
                 <li><a href="Contact.html">Contact us</a></li>
             </ul>
+            <button class="hamburger" >☰</button>
+
           </nav>
         </header>
+
 
         <div class="cover-container"><img src="Images\A level.png" alt="A level students" class="cover-img"></div>
     
@@ -247,31 +250,31 @@
     </button>
     
 
-    <!--Dynamic Table-->
-    <div class="table-container"></div>
-    <b><h2 class="montserrat first-heading ">Teachers with their Respective Subject Allocations</h2></b>
-    <form class="form-container">
-            <label for="subject">Subject</label><br>
-            <input type="text" id="subject" name="subject"><br><br>
+   <!--Dynamic Table-->
+   <div class="table-container"></div>
+   <b><h3 class="montserrat heading">Teachers with their Respective Subject Allocations</h3></b>
+   <form class="form-container" id="ac-form">
+           <label for="subject">Subject</label><br>
+           <input type="text" id="subject" name="subject"><br><br>
 
-            <label for="teacher">Teacher</label><br>
-            <input type="text" id="teacher" name="teacher"><br><br>
+           <label for="teacher">Teacher</label><br>
+           <input type="text" id="teacher" name="teacher"><br><br>
 
-            <button>Submit</button><br><br>
-    </form>        
- 
-            <table>
-                <thead>
-                    <tr>
-                        <th>Subject</th>
-                        <th>Teacher</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
+           <button class="dyn-table">Submit</button><br><br>
+   </form>        
 
-        </div>
+           <table class="ac-table">
+               <thead>
+                   <tr>
+                       <th>Subject</th>
+                       <th>Teacher</th>
+                       <th></th>
+                   </tr>
+               </thead>
+               <tbody></tbody>
+           </table>
+
+       </div>
   
 
     <!--Footer-->
