--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="css/testimonial.css">
     <script src = scripts.js></script>
-    <script src="tab.js"></script>
     <link rel="shortcut icon" href="Images/1.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -143,9 +141,10 @@
         <div class="hnews-section">
         <div class="hnews-title montserrat">
           <h2 montserrat>Recent Events</h2>
-          <p class="open-sans">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis sequi 
-            ratione officia ipsam rem corporis quam incidunt inventore? Quasi neque itaque 
-            sunt corrupti magnam tempore necessitatibus minima vitae eius nulla!
+          <p class="open-sans">Welcome to the Recent News section of our school website! This 
+            area is dedicated to keeping our students, parents, and community informed about important events, 
+            updates, and achievements happening within our school. Stay tuned for announcements about upcoming activities, 
+            noteworthy accomplishments by our students and staff, and vital information pertaining to our educational community. 
           </p>
         </div>
         <div class="cards">
@@ -154,12 +153,14 @@
               <img src="Images\GAPA-practice.jpg" alt="GAPA">
             </div>
             <div class="h-content open-sans">
-              <h4>Title One</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nulla,
-                 nihil dolorem harum tempore, ex quod ea facere perspiciatis itaque aliquid 
-                 non delectus, quae eum? Quis dolores autem illum? Facere?
+              <h4>GAPA 2025</h4>
+              <p>GAPA this year will yet again showcase the diverse talents of its students through vibrant performances in drama, 
+                music, and dance. This year's theme focuses on unity and diversity, allowing students to express their 
+                unique stories and perspectives on stage. Rhoda Nsibambi emerged victorious at the end of the event, bagging in their second 
+                another trophy, in two years. <br>
+                
                 </p>
-                <a href="">Read More</a>
+                <a href="https://www.linkedin.com/pulse/gayaza-high-school-showcases-talent-gapa-2025-drhgf/">Read More</a>
             </div>
             <div class="posted-date">
               <p>Posted on Mar 30, 2025</p>
@@ -170,12 +171,12 @@
               <img src="Images\Stanbic.jpg" alt="GAPA">
             </div>
             <div class="h-content open-sans">
-              <h4>Title Two</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nulla,
-                 nihil dolorem harum tempore, ex quod ea facere perspiciatis itaque aliquid 
-                 non delectus, quae eum? Quis dolores autem illum? Facere?
+              <h4>Stanbic Bank Championship</h4>
+              <p>Gayaza High School geared up for an exciting participation in the upcoming Stanbic Bank - Uganda National Schools 
+                Championship. As one of the leading institutions in the competition, Gayaza has consistently demonstrated excellence in 
+                sports and academics. The school's talented participants brought back home a trophy.
                 </p>
-                <a href="">Read More</a>
+                <a href="https://gayazaoldgirls.com/gayaza-high-school-win-stanbic-national-schools-championship/">Read More</a>
             </div>
             <div class="posted-date">
               <p>Posted on Mar 26, 2025</p>
@@ -186,12 +187,12 @@
               <img src="Images\Warren_house.jpg" alt="GAPA">
             </div>
             <div class="h-content open-sans">
-              <h4>Title Three</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur nulla,
-                 nihil dolorem harum tempore, ex quod ea facere perspiciatis itaque aliquid 
-                 non delectus, quae eum? Quis dolores autem illum? Facere?
+              <h4>New House</h4>
+              <p>Gayaza High School is thrilled to announce the opening of its long-awaited new house, named Warren. 
+                This significant addition to the school's infrastructure aims to enhance the living and learning environment for students. 
+                Designed with modern amenities, Warren House will foster a sense of community and provide a safe space for personal growth and development.
                 </p>
-                <a href="">Read More</a>
+                <a href="https://gayazaoldgirls.com/warren-house/">Read More</a>
             </div>
             <div class="posted-date">
               <p>Posted on Mar 2, 2025</p>
@@ -201,11 +202,11 @@
         </div>
       </div>
     </section>
-    <div>
+    <!--<div>-->
 
   
-     <!--Testimonial Carousel-->
-     <div class="slider">
+    <!--Testimonial Carousel-->
+    <div class="slider">
       <div class="slid">
         <section class="testheader"><h2 class="montserrat">TESTIMONIALS</h2></section>
     <section class="sliden">
@@ -291,9 +292,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
   <script src="scripts.js"></script>
   <script src="jscript.js"></script>
-  <script src="tab.js"></script>
+  <script src="test.js"></script>
   <script  src="darkmode.js"></script>
   <script src="hamburger.js"></script>
-  <script src="test.js"></script>
+
 </body>
 </html>
